Options pages now correctly handle overflow off the bottom of the page

--- a/opt-style.css
+++ b/opt-style.css
@@ -24,10 +24,11 @@ html, body {
 
 #main{
     width:100%;
-    height:80%;
     background-color: rgba(217, 231, 249, .9);
     color: rgba(0, 0, 0, 1);
     padding : 1em;
+    display: block;
+    overflow: auto;
 }
 
 #left{
